--- a/p3/a3/templates/home.html
+++ b/p3/a3/templates/home.html
@@ -5,7 +5,7 @@
 {% block body %}
 <script src="https://cdn.tailwindcss.com"></script>
 {% tailwind_css %}
-    <img src ="{% static 'gvpce.jpg' %}" class="w-full">
+    <img src ="{% static 'gvpce3.jpg' %}" class="w-full">
 
 {% include "footer.html"%}
 {% endblock %}
