--- a/p3/a3/templates/nav_bar.html
+++ b/p3/a3/templates/nav_bar.html
@@ -34,6 +34,9 @@
               <a href="user_login/ " class="text-white hover:text-gray-300">Faculty</a>
             </li>
             <li>
+              <a href="hod_login/ " class="text-white hover:text-gray-300">HOD</a>
+            </li>
+            <li>
               <a href=" hr_login/ " class="text-white hover:text-gray-300">Manager</a>
             </li>
           </ul>
