--- a/p3/a3/templates/profile.html
+++ b/p3/a3/templates/profile.html
@@ -16,61 +16,52 @@
     <div class="grid gap-4 gap-y-2 text-sm grid-cols-1 md:grid-cols-5">
       <div class="md:col-span-5">
         <label for="full_name">User Name</label>
-        <input type="text" name="username" id="" class="h-10 border mt-1 rounded px-4 w-full bg-gray-50" placeholder="username"><br>
+        <input type="text" name="username" id="" class="h-10 border mt-1 rounded px-4 w-full bg-gray-50" placeholder="username" required><br>
       </div>
         <div class="md:col-span-5">
         <label for="full_name">Email</label>
-        <input type="email" name="email" id="" class="h-10 border mt-1 rounded px-4 w-full bg-gray-50" placeholder="email"><br>
+        <input type="email" name="email" id="" class="h-10 border mt-1 rounded px-4 w-full bg-gray-50" placeholder="email" required><br>
         </div>
         <div class="md:col-span-5">
         <label for="full_name">First Name</label>
-        <input type="text" name="firstname" id="" class="h-10 border mt-1 rounded px-4 w-full bg-gray-50" placeholder="firstname"><br>
+        <input type="text" name="firstname" id="" class="h-10 border mt-1 rounded px-4 w-full bg-gray-50" placeholder="firstname" required><br>
         </div>
         <div class="md:col-span-5">
             <label for="full_name">Last Name</label>
-            <input type="text" name="lastname" id="" class="h-10 border mt-1 rounded px-4 w-full bg-gray-50" placeholder="lastname"><br>
+            <input type="text" name="lastname" id="" class="h-10 border mt-1 rounded px-4 w-full bg-gray-50" placeholder="lastname" required><br>
         </div>
         <div class="md:col-span-5">
             <label for="full_name">Empoloyee Id</label>
-            <input type="text" name="emp_id" id="" class="h-10 border mt-1 rounded px-4 w-full bg-gray-50" value = "{{bar}}"><br>
+            <input type="text" name="emp_id" id="" class="h-10 border mt-1 rounded px-4 w-full bg-gray-50" value = "{{bar}}" required><br>
         </div>
-        <div class="md:col-span-5">
-        <label for="full_name">Position</label>
-        <select required name="position" class="border w-full h-10 px-3 rounded-md" id="leave" >
-            <option value="dean">Dean</option>
-            <option value="HOD">HOD</option>
-            <option value="professor">Professor</option>
-            <option value="assistant professor">Assistant professor </option>
-        </select> 
-        </div>
-
+        
         <div class="md:col-span-5">
             <label for="full_name">Date of Birth</label>
-            <input type="date" name="dob" id="" class="h-10 border mt-1 rounded px-4 w-full bg-gray-50" placeholder="date of birth"><br>
+            <input type="date" name="dob" id="" class="h-10 border mt-1 rounded px-4 w-full bg-gray-50" placeholder="date of birth" required><br>
         </div>
     </div>
     </div>
 <div class="">
       <div class="md:col-span-5">
         <label for="full_name">Mobile Number</label>
-            <input type="text" name="mobile" id="" class="h-10 border mt-1 rounded px-4 w-full bg-gray-50" placeholder="mobile"><br>
+            <input type="text" name="mobile" id="" class="h-10 border mt-1 rounded px-4 w-full bg-gray-50" placeholder="mobile" maxlength="10" required><br>
       </div>
 </div>
       <div class="md:col-span-5">
         <label for="full_name">Address</label>
-        <input type="text" name="address" id="" class="h-10 border mt-1 rounded px-4 w-full bg-gray-50" placeholder="address"><br>
+        <input type="text" name="address" id="" class="h-10 border mt-1 rounded px-4 w-full bg-gray-50" placeholder="address" required><br>
       </div>
       <div class="md:col-span-5">
         <label for="full_name">City</label>
-        <input type="text" name="city" id="" class="h-10 border mt-1 rounded px-4 w-full bg-gray-50" placeholder="city"><br>
+        <input type="text" name="city" id="" class="h-10 border mt-1 rounded px-4 w-full bg-gray-50" placeholder="city" required><br>
       </div>
       <div class="md:col-span-5">
         <label for="full_name">Country</label>
-        <input type="text" name="country" id="" class="h-10 border mt-1 rounded px-4 w-full bg-gray-50" placeholder="country"><br>
+        <input type="text" name="country" id="" class="h-10 border mt-1 rounded px-4 w-full bg-gray-50" placeholder="country"  required><br>
       </div>
       <div class="md:col-span-5">
         <label for="full_name">Postal Code</label>
-        <input type="text" name="postal_code" id="" class="h-10 border mt-1 rounded px-4 w-full bg-gray-50" placeholder="postal_code"><br>
+        <input type="text" name="postal_code" id="" class="h-10 border mt-1 rounded px-4 w-full bg-gray-50" placeholder="postal_code" required><br>
         </div>
      
         <!-- <button class="bg-blue-500 text-white hover:bg-blue-700 font-bold rounded-md px-2 py-1 " type="submit">Submit</button> -->
