--- a/p3/accounts/templates/signup.html
+++ b/p3/accounts/templates/signup.html
@@ -1,47 +1,42 @@
+
+{% load static tailwind_tags %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://cdn.tailwindcss.com"></script>
     <title>Document</title>
 </head>
-<style>
-body {
-    background: #6753;
-    
-}
-h1 {
-    background: #568;
-    padding: 30px;
-    color: white;
-}
+<body class = "bg-slate-200">
 
-label {
-    display: block;
-    margin-bottom: 5px;
-    margin-top: 10px;
-}
-input[type="submit"]{
-  display: block;
-  background: #98E;
-  margin-top: 10px;
-}
-.signup {
-    background: white;
-    margin-left : 35px;
-    margin-right : 50%;
-    padding: 10px;
-}
-</style>
-<body>
-<div class="signup">
-    <h1>signup</h1><hr>
-    <form action="" method="post">
-       {% csrf_token %}
-     {{ form }}
-        <input type="submit" name="" value="SignUp" id="">
-    </form>
+<form method="post" class="max-w-md mx-auto bg-white py-10 px-6 rounded-lg shadow-lg">
+  {% csrf_token %}
+  <h2 class="text-2xl font-bold mb-8">Registration</h2><hr>
+  {% for field in form %}
+    <div class="mb-6">
+      <label for="{{ field.id_for_label }}" class="block text-gray-700 text-sm font-bold mb-2">{{ field.label }}</label>
+      <div class="mt-2 border-2 w-[185px]">{{field}}</div>
+            </div>
+{% comment %} {{ field.field.widget.attrs.update({'class': 'w-full px-4 py-2 rounded-lg border border-gray-300 focus:outline-none focus:border-blue-500'}) }}
+{{ field }} {% endcomment %}
+      {% if field.help_text %}
+        <small class="text-gray-600">{{ field.help_text }}</small>
+      {% endif %}
+      {% if field.errors %}
+        <ul class="mt-2 text-red-500 text-sm">
+          {% for error in field.errors %}
+            <li>{{ error }}</li>
+          {% endfor %}
+        </ul>
+      {% endif %}
+    </div>
+  {% endfor %}
+  <div class="mt-8">
+    <button type="submit" class="w-full bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">Register</button>
   </div>
+</form>
+
 </body>
-</html>
+</html> 
