--- a/p3/a3/templates/assign_sub.html
+++ b/p3/a3/templates/assign_sub.html
@@ -1,4 +1,4 @@
-{% extends "hr_nav.html" %}
+{% extends "hod_nav.html" %}
 {% load static tailwind_tags  %}
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
