--- a/p3/a3/templates/emp_nav.html
+++ b/p3/a3/templates/emp_nav.html
@@ -7,7 +7,7 @@
     <div class="container mx-auto px-4">
       <div class="flex items-center justify-between py-4">
         <div>
-          <a href="#" class="text-white text-xl font-bold">Gayatri Vidya Parishad</a>
+          <a href="#" class="text-white text-xl font-bold">Gayatri Vidya Parishad Collage of Engineering(A)</a>
         </div>
         <div class="hidden md:block">
           <ul class="flex space-x-4">
@@ -29,12 +29,10 @@
             <li>
               <a href=" ../emp_profile" class="text-white hover:text-gray-300"> Profile </a>
             </li>
-            <li>
-              <a href="../feedback" class="text-white hover:text-gray-300">feedback</a>
-            </li>
+           
             <form class="logout-link"   action="{% url 'accounts:logout' %}" method = "post">
             {% csrf_token %}
-            <button class="mr-10 hover:text-yellow-400 text-white" type="submit">logout</button> 
+            <button class="hover:text-yellow-400 text-white" type="submit">logout</button> 
             </form>  
           </ul>
         </div>
