--- a/p3/a3/templates/hod_profile.html
+++ b/p3/a3/templates/hod_profile.html
@@ -17,6 +17,7 @@
             <div class="bg-gray-200 py-4 px-12 m-2">First Name</div>
             <div class="bg-gray-200 py-4 px-12 m-2">Last name</div>
             <div class="bg-gray-200 py-4 px-12 m-2">Empoloyee Id</div>
+            <div class="bg-gray-200 py-4 px-12 m-2">Position</div>
             <div class="bg-gray-200 py-4 px-12 m-2">Date of Birth</div>
             <div class="bg-gray-200 py-4 px-14 m-2">PhoneNumber</div>
             <div class="bg-gray-200 py-4 px-12 m-2">Address</div>
@@ -25,11 +26,12 @@
             <div class="bg-gray-200 py-4 px-12 m-2">Postal Code</div>
         </div>
         <div class="grid grid-cols-1 mb-3">
-            <div class="bg-gray-200 py-4 px-12 m-2">{{ profile.username }}</div>
+            <div class="bg-gray-200 py-4 px-12  m-2">{{ profile.username }}</div>
             <div class="bg-gray-200 py-4 px-12 m-2">{{ profile.email }}</div>
             <div class="bg-gray-200 py-4 px-12 m-2">{{ profile.firstname }}</div>
             <div class="bg-gray-200 py-4 px-12 m-2">{{ profile.lastname }}</div>  
             <div class="bg-gray-200 py-4 px-12 m-2">{{ profile.emp_id }}</div>  
+            <div class="bg-gray-200 py-4 px-12 m-2">{{ profile.position }}</div>  
             <div class="bg-gray-200 py-4 px-12 m-2">{{ profile.dob }}</div>  
             <div class="bg-gray-200 py-4 px-12 m-2">{{ profile.mobile }}</div>  
             <div class="bg-gray-200 py-4 px-12 m-2">{{ profile.address }}</div>  
