--- a/p3/a3/templates/leaves.html
+++ b/p3/a3/templates/leaves.html
@@ -16,7 +16,9 @@
             {% csrf_token %} 
             <!-- {{ forms }} -->
             <label for="name">Full Name</label>
-            <input  class="border w-full h-10 px-3 mb-5 rounded-md" type="text" required name="name" placeholder="" id="">
+            <input  class="border w-full h-10 px-3 mb-5 rounded-md" type="text" required name="name" placeholder="username" id="">
+            <label for="name">Email</label>
+            <input  class="border w-full h-10 px-3 mb-5 rounded-md" type="email" required name="email" placeholder="Email" id="">
             <label for="startdate">Leave Start Date</label>
             <input  class="border w-full h-10 px-3 mb-5 rounded-md" type="date" required name="startdate" id="">
             <label for="enddate">Leave End Date</label>
