--- a/p3/accounts/templates/hod_login.html
+++ b/p3/accounts/templates/hod_login.html
@@ -36,6 +36,18 @@
                 value="Login"
                 class="mt-3 font-thin text-xl ml-9 text-gray-200 cursor-pointer hover:rounded-3xl p-1.5 m-auto hover:bg-green-700 duration-1000"/>
             </div>
+            <div class="grid grid-cols-2 mt-3">
+              <div class="text-gray-400 ml-3 font-thin">
+                Didn't have an account?
+              </div>
+              <a href="../signup" target="_self"
+                ><input
+                  type="button"
+                  name="signup"
+                  id=""
+                  value="Sign-Up"
+                  class="font-thin cursor-pointer text-gray-200 text-lg hover:bg-green-700 duration-1000 hover:rounded-3xl p-1.5 m-auto"/></a>
+            </div>
           </form>
         </div>
       </div>
