--- a/p3/a3/templates/profile.html
+++ b/p3/a3/templates/profile.html
@@ -1,77 +1,162 @@
-{% load static tailwind_tags  %}
-{% block body %}
-<script src="https://cdn.tailwindcss.com"></script>
-{% tailwind_css %}
-<link rel="stylesheet" href="">
-<div class="min-h-screen p-6 bg-gray-100  items-center justify-center">
-    <div class="container max-w-screen-lg mx-auto">
-      <div>
-        <h2 class="font-semibold text-center text-3xl text-yellow-700"> Update Profile</h2>
-        <div class="bg-white rounded shadow-lg p-4 px-4 md:p-8 mb-6">
-            <div class="grid gap-4 gap-y-2 text-sm grid-cols-1 lg:grid-cols-3">
-              <div class="text-gray-600"></div>
-<form action="{% url 'a3:profile' %}" method="post" class="">
-    {% csrf_token %}
-    <div class="lg:col-span-2">
-    <div class="grid gap-4 gap-y-2 text-sm grid-cols-1 md:grid-cols-5">
-      <div class="md:col-span-5">
-        <label for="full_name">User Name</label>
-        <input type="text" name="username" id="" class="h-10 border mt-1 rounded px-4 w-full bg-gray-50" placeholder="username" required><br>
-      </div>
-        <div class="md:col-span-5">
-        <label for="full_name">Email</label>
-        <input type="email" name="email" id="" class="h-10 border mt-1 rounded px-4 w-full bg-gray-50" placeholder="email" required><br>
-        </div>
-        <div class="md:col-span-5">
-        <label for="full_name">First Name</label>
-        <input type="text" name="firstname" id="" class="h-10 border mt-1 rounded px-4 w-full bg-gray-50" placeholder="firstname" required><br>
-        </div>
-        <div class="md:col-span-5">
-            <label for="full_name">Last Name</label>
-            <input type="text" name="lastname" id="" class="h-10 border mt-1 rounded px-4 w-full bg-gray-50" placeholder="lastname" required><br>
-        </div>
-        <div class="md:col-span-5">
-            <label for="full_name">Empoloyee Id</label>
-            <input type="text" name="emp_id" id="" class="h-10 border mt-1 rounded px-4 w-full bg-gray-50" value = "{{bar}}" required><br>
-        </div>
-        
-        <div class="md:col-span-5">
-            <label for="full_name">Date of Birth</label>
-            <input type="date" name="dob" id="" class="h-10 border mt-1 rounded px-4 w-full bg-gray-50" placeholder="date of birth" required><br>
-        </div>
-    </div>
-    </div>
-<div class="">
-      <div class="md:col-span-5">
-        <label for="full_name">Mobile Number</label>
-            <input type="text" name="mobile" id="" class="h-10 border mt-1 rounded px-4 w-full bg-gray-50" placeholder="mobile" maxlength="10" required><br>
-      </div>
-</div>
-      <div class="md:col-span-5">
-        <label for="full_name">Address</label>
-        <input type="text" name="address" id="" class="h-10 border mt-1 rounded px-4 w-full bg-gray-50" placeholder="address" required><br>
-      </div>
-      <div class="md:col-span-5">
-        <label for="full_name">City</label>
-        <input type="text" name="city" id="" class="h-10 border mt-1 rounded px-4 w-full bg-gray-50" placeholder="city" required><br>
-      </div>
-      <div class="md:col-span-5">
-        <label for="full_name">Country</label>
-        <input type="text" name="country" id="" class="h-10 border mt-1 rounded px-4 w-full bg-gray-50" placeholder="country"  required><br>
-      </div>
-      <div class="md:col-span-5">
-        <label for="full_name">Postal Code</label>
-        <input type="text" name="postal_code" id="" class="h-10 border mt-1 rounded px-4 w-full bg-gray-50" placeholder="postal_code" required><br>
-        </div>
-     
-        <!-- <button class="bg-blue-500 text-white hover:bg-blue-700 font-bold rounded-md px-2 py-1 " type="submit">Submit</button> -->
-<input type="submit" name="submit" class="bg-black text-white mt-3 ml-32 text-lg  hover:bg-blue-700 font-bold rounded-md px-2 py-1" value="Submit" id="">
-<!-- <input type="text" name="name" id="">
-<input type="text" name="name" id=""> -->
+{% block css %}
+<style>
+body {
+    background: rgb(99, 39, 120)
+}
 
-</form>
+.form-control:focus {
+    box-shadow: none;
+    border-color: #BA68C8
+}
+
+ .profile-button {
+    background-color :rgb(99, 39, 120) ;
+    box-shadow: none;
+    border: solid 3px #BA68C8;
+    padding : 2%;
+
+}
+
+.profile-button:hover {
+    background: #8345;
+}
+
+.profile-button:focus {
+    background: #6753;
+    box-shadow: none
+}
+
+.profile-button:active {
+    background: #6773;
+    box-shadow: none
+} 
+
+.back:hover {
+    color: #682773;
+    cursor: pointer
+}
+
+.labels {
+    font-size: 11px
+}
+
+.add-experience:hover {
+    background: #BA68C8;
+    color: #fff;
+    cursor: pointer;
+    border: solid 1px #BA68C8
+}
+</style>
+{% endblock %}
+{% block body %}
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-alpha1/dist/css/bootstrap.min.css">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script src="	https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+<link rel="stylesheet" href="">
+<form action="{% url 'a3:profile' %}" method="post" class="" enctype="multipart/form-data">
+    {% csrf_token %}
+    {% if form.errors %}
+    <ul class="errorlist">
+        {% for field in form %}
+            {% for error in field.errors %}
+                <li>{{ error }}</li>
+            {% endfor %}
+        {% endfor %}
+    </ul>
+    {% endif %}
+    <div class="row">
+        <div class="col-md-3 border-right">
+        </div>
+        <div class="col-md-5 border-right">
+            <div class="p-3 py-5">
+                <div class="d-flex justify-content-between align-items-center mb-3">
+                    <h4 class="text-right">Profile Settings</h4>
+                </div>
+                <hr>
+                <div class="d-flex flex-column align-items-center text-center p-3 py-5">
+                    <input class="border border-primary" type="file" name="image" accept="image/*">
+                </div>
+                <div class="row mt-2">
+                    <div class="col-md-6">
+                        <label class="labels">Name</label>
+                        <input type="text" class="form-control" placeholder="First name" name="username">
+                    </div>
+                    <div class="col-md-6">
+                        <label class="labels">Surname</label>
+                        <input type="text" class="form-control" placeholder="Surname" name="surname">
+                    </div>
+                </div>
+                <div class="row mt-3">
+                    <div class="col-md-12">
+                        <label class="labels">Mobile Number</label>
+                        <input type="text" class="form-control" placeholder="Enter phone number" name="mobile" maxlength="10">
+                    </div>
+                    <div class="col-md-12">
+                        <label class="labels">Employee Id</label>
+                        <input type="number" class="form-control" placeholder="Employee Id" name="emp_id">
+                    </div>
+                    <div class="col-md-12">
+                        <label class="labels">Date of Birth</label>
+                        <input type="date" class="form-control" placeholder="Date of birth" name="dob">
+                    </div>
+                    <div class="col-md-12">
+                        <label class="labels">Address Line 1</label>
+                        <input type="text" class="form-control" placeholder="Enter address line 1" name="address">
+                    </div>
+                    <div class="col-md-12">
+                        <label class="labels">Postcode</label>
+                        <input type="text" class="form-control" placeholder="Postal Code" name="postal_code">
+                    </div>
+                    <div class="col-md-12">
+                        <label class="labels">City</label>
+                        <input type="text" class="form-control" placeholder="Enter City" name="city">
+                    </div>
+                    <div class="col-md-12">
+                        <label class="labels">Email ID</label>
+                        <input type="text" class="form-control" placeholder="Enter email ID" name="email">
+                    </div>
+                    <div class="col-md-12">
+                        <label class="labels">Education</label>
+                        <input type="text" class="form-control" placeholder="Education" name="education">
+                    </div>
+                </div>
+                <div class="row mt-3">
+                    <div class="col-md-6">
+                        <label class="labels">Country</label>
+                        <input type="text" class="form-control" placeholder="Country" name="country">
+                    </div>
+                    <div class="col-md-6">
+                        <label class="labels">State/Region</label>
+                        <input type="text" class="form-control" placeholder="State/Region" name="state">
+                    </div>
+                </div>
+                <div class="mt-5 text-center">
+                    <input class="profile-button" type="submit" value="Save Profile">
+                </div>
             </div>
         </div>
-      </div>
+        <div class="col-md-4">
+            <div class="p-3 py-5">
+                <div class="d-flex justify-content-between align-items-center experience">
+                    <span>Edit Experience</span>
+                    <span class="border px-3 p-1 add-experience">
+                        <i class="fa fa-plus"></i>&nbsp;Experience
+                    </span>
+                </div>
+                <br>
+                <div class="col-md-12">
+                    <label class="labels">Experience in Teaching</label>
+                    <input type="text" class="form-control" placeholder="Experience" name="experience">
+                </div>
+                <br>
+                <div class="col-md-12">
+                    <label class="labels">Additional Details</label>
+                    <input type="text" class="form-control" placeholder="Additional details" name="details">
+                </div>
+            </div>
+        </div>
     </div>
+</form>
+
 {% endblock %}
